--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -25,6 +25,7 @@
     --input: 214.3 31.8% 91.4%;
     --ring: 221.2 83.2% 53.3%;
     --radius: 0.5rem;
+    @import url('./github-markdown-light.css')
   }
 
   .dark {
@@ -60,7 +61,6 @@
     @apply bg-background text-foreground;
   }
 
-
   /* 滚动槽 */
   ::-webkit-scrollbar {
     width: 6px;
@@ -80,5 +80,19 @@
     border-radius: 3px;
     background: rgba(0, 0, 0, 0.12);
     -webkit-box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.2);
+  }
+
+  .markdown-body {
+    box-sizing: border-box;
+    min-width: 200px;
+    max-width: 980px;
+    margin: 0 auto;
+    padding: 45px;
+  }
+
+  @media (max-width: 767px) {
+    .markdown-body {
+      padding: 15px;
+    }
   }
 }
