--- a/styles/globals.css
+++ b/styles/globals.css
@@ -100,12 +100,8 @@
     background: radial-gradient(circle, rgb(17 16 16 / 56%) 0, #000000 100%);
   }
 
-
-  /* .prompt_card {
-    @apply flex-1 break-inside-avoid rounded-lg border border-gray-300 bg-white/20 bg-clip-padding p-6 pb-4 backdrop-blur-lg backdrop-filter md:w-[360px] w-full h-fit;
-  } */
 }
-
+/* 
 
 .bg-wrapper {
   width: 100vw;
@@ -130,9 +126,6 @@
 .wrapper-light {
   background: radial-gradient(circle, rgba(2, 0, 36, 0) 0, #fafafa 100%);
 }
-
-
-
 
 
 .bg-wrapper:after {
@@ -206,4 +199,4 @@
 
 .prompt_layout {
   @apply space-y-6 py-8 sm:columns-2 sm:gap-6 xl:columns-3;
-}
+} */
